--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
+html {
   font-size: 13px;
-  font-family: sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
