--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url(./fonts/fonts.css);
+
 html {
   font-size: 13px;
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "HelveticaNeueCyr", Helvetica, sans-serif;
 }
