--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,7 +1,10 @@
 .Button {
   text-decoration: none;
-  padding: 0.7692em 1.2308em;
+  padding: 1.2308em;
+  padding-top: 1em;
+  padding-bottom: 0.7692em;
   border-radius: 0.3077em;
+  letter-spacing: 0.015em;
   cursor: pointer;
   font-weight: 500;
 }
@@ -15,11 +18,11 @@
   background-color: #0059ff;
 }
 
-.Button_theme_create_pressed {
+.Button_pressed.Button_theme_create {
   background-color: #0011fd;
 }
 
-.Button_theme_create_disabled {
+.Button_disabled.Button_theme_create {
   background-color: #e5e9ec;
 }
 
@@ -32,10 +35,10 @@
   background-color: #E9ECEF;
 }
 
-.Button_theme_cancel_pressed {
+.Button_pressed.Button_theme_cancel {
   background-color: #c9ced4;
 }
 
-.Button_theme_cancel_disabled {
+Button_disabled.Button_theme_cancel {
   background-color: #e1e5e8;
 }
