--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -32,13 +32,17 @@
 }
 
 .Button_theme_cancel:hover {
-  background-color: #E9ECEF;
+  background-color: #dde0e4;
 }
 
 .Button_theme_cancel:active {
   background-color: #c9ced4;
 }
 
-Button_disabled.Button_theme_cancel {
+.Button_disabled.Button_theme_cancel {
   background-color: #e1e5e8;
+}
+
+.Button_disabled {
+  color: rgba(0,0,0,0.20);
 }
