--- a/src/components/RoundButton.css
+++ b/src/components/RoundButton.css
@@ -1,10 +1,18 @@
 .RoundButton {
+  display: inline-block;
+  position: relative;
   width: 1.846em;
   height: 1.846em;
   border-radius: 100px;
+  color: rgba(0,0,0,0.43);
   background-color: #E9ECEF;
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-position: center; 
-  background-size: 10px 10px;
+  cursor: pointer;
+}
+
+
+.RoundButton-Icon {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
