--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -1,6 +1,8 @@
 .MainPage {}
 
-.MainPage-Aside {
-  padding-left: 24px;
-  width: 220px;
+.MainPage-DatePicker {
+  width: 197px;
+  margin-left: 24px;
+  margin-top: 11px;
 }
+
