--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -4,5 +4,15 @@
   width: 197px;
   margin-left: 24px;
   margin-top: 11px;
+  margin-bottom: 12px;
 }
 
+.MainPage-RoomGroupListWrapper {
+  border-top: 1px solid #E9ECEF;
+  width: 245px;
+}
+
+.MainPage-RoomGroupList {
+  margin-left: 25px;
+  margin-top: 21px;
+}
