--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@
 
 html {
   font-size: 13px;
-  font-family: "HelveticaNeueCyr", Helvetica, sans-serif;
+  font-family: "HelveticaNeue", Helvetica, sans-serif;
 }
