--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,29 +1,18 @@
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url(./HelveticaNeueCyr-Roman.eot);
-	src: local('HelveticaNeueCyr-Roman'),
-		url(./HelveticaNeueCyr-Roman.woff) format('woff'),
-		url(./HelveticaNeueCyr-Roman.ttf) format('truetype');
-	font-weight: normal;
+@font-face{
+	src: url(./HelveticaNeue-Bold.woff2)format("woff2");
+	font-family: 'HelveticaNeue';
+	font-weight: bold;
 	font-style: normal;
 }
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url(./HelveticaNeueCyr-Medium.eot);
-	src: local('HelveticaNeueCyr-Medium'),
-		url(./HelveticaNeueCyr-Medium.woff) format('woff'),
-		url(./HelveticaNeueCyr-Medium.ttf) format('truetype');
+@font-face{
+	src: url(./HelveticaNeue-Medium.woff2)format("woff2");
+	font-family: 'HelveticaNeue';
 	font-weight: 500;
 	font-style: normal;
 }
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url(./HelveticaNeueCyr-Bold.eot);
-	src: local('HelveticaNeueCyr-Bold'),
-		url(./HelveticaNeueCyr-Bold.woff) format('woff'),
-		url(./HelveticaNeueCyr-Bold.ttf) format('truetype');
-	font-weight: bold;
+@font-face{
+	src: url(./HelveticaNeue-Roman.woff2)format("woff2");
+	font-family: 'HelveticaNeue';
+	font-weight: normal;
 	font-style: normal;
 }
