--- a/src/components/RoomGroupList.css
+++ b/src/components/RoomGroupList.css
@@ -2,10 +2,14 @@
 
 }
 
+.RoomGroupList-Group {
+  margin-bottom: 19px;
+}
+
 .RoomGroupList-GroupTitle {
   color: #858E98;
   font-size: 0.846em;
-  letter-spacing: 0.0307em;
+  letter-spacing: 0.0308em;
   margin-bottom: 0.615em;
   font-weight: bold;
   text-transform: uppercase;
