--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -1,18 +1,36 @@
 .MainPage {}
 
+.MainPage-DatePickerWrapper {
+  float: left;
+  padding-left: calc(50% - 640px);
+  padding-bottom: 10px;
+  padding-top: 11px;
+  border-bottom: 1px solid #E9ECEF;
+}
+
 .MainPage-DatePicker {
   width: 197px;
   margin-left: 24px;
-  margin-top: 11px;
-  margin-bottom: 10px;
+  margin-right: 24px;
 }
 
 .MainPage-RoomGroupListWrapper {
-  border-top: 1px solid #E9ECEF;
+  padding-left: calc(50% - 640px);
   width: 245px;
+  float: left;
+  clear: left;
 }
 
 .MainPage-RoomGroupList {
   margin-left: 25px;
   margin-top: 23px;
+}
+
+.MainPage-RoomEventListWrapper {
+  margin-left: calc(50% - 640px + 245px);
+  overflow-y: scroll;
+}
+
+.MainPage-Clearfix {
+  clear: both;
 }
