--- a/src/components/RoomGroupList.css
+++ b/src/components/RoomGroupList.css
@@ -28,10 +28,12 @@
 }
 
 .RoomGroupList-GroupItem_hover .RoomGroupList-GroupItemTitle {
+  font-weight: bold;
   color: #0070E0;
 }
 
 .RoomGroupList-GroupItem_pressed .RoomGroupList-GroupItemTitle {
+  font-weight: bold;
   color: #1D54FE
 }
 
