--- a/src/components/TimeLine.css
+++ b/src/components/TimeLine.css
@@ -1,6 +1,31 @@
 .Timeline {
+  display: inline-flex;
+  flex-flow: row nowrap;
   height: 45px;
-  width: 1368px;
+  font-size: 0.846em;
   background-color: #fff;
   border-bottom: 1px solid #E9ECEF;
+  color: #252525;
+  letter-spacing: 0.4px;
+  padding-left: 17px;
+}
+
+.Timeline-Hour {
+  position: relative;
+  min-width: 49px;
+  margin-left: 17px;
+  padding-top: 16px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.Timeline-Hour:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background-color: rgba(19,100,205,0.10);
+  width: 1px;
+  min-height: calc(100vh - 71px - 46px);
+  left: 50%;
+  top: 46px;
 }
