--- a/src/components/TimeLine.css
+++ b/src/components/TimeLine.css
@@ -1,4 +1,5 @@
 .Timeline {
+  position: relative;
   display: inline-flex;
   flex-flow: row nowrap;
   height: 45px;
@@ -6,6 +7,7 @@
   background-color: #fff;
   border-bottom: 1px solid #E9ECEF;
   color: #252525;
+  font-weight: bold;
   letter-spacing: 0.4px;
   padding-left: 17px;
 }
@@ -16,7 +18,6 @@
   margin-left: 17px;
   padding-top: 16px;
   text-align: center;
-  font-weight: bold;
 }
 
 .Timeline-Hour:after {
@@ -28,4 +29,12 @@
   min-height: calc(100vh - 71px - 46px);
   left: 50%;
   top: 46px;
+}
+
+.Timeline-CurrentTime {
+  position: absolute;
+  top: 16px;
+  width: 1px;
+  background-color: #007DFF;
+  min-height: calc(100vh - 71px - 46px + 16px + 13px);
 }
