Update timeline classname

--- a/src/components/TimeLine.css
+++ b/src/components/TimeLine.css
@@ -35,7 +35,7 @@
   top: 11px;
 }
 
-.Timeline-CurrentTimeClock {
+.Timeline-Clock {
   position: absolute;
   left: -25px;
   padding-top: 0.363em;
