--- a/src/components/EditEventPage.css
+++ b/src/components/EditEventPage.css
@@ -8,6 +8,17 @@
   flex: 1;
 }
 
+.EditEventPage-Main,
+.EditEventPage-Footer {
+  padding: 0em calc(50% - 640px);
+}
+
+.EditEventPage-Form {
+  position: relative;
+  margin: 0 204px;
+  margin-top: 32px;
+}
+
 .EditEventPage-Footer {
   height: 76px;
   border-top: 1px solid #E9ECEF;
@@ -18,4 +29,17 @@
 .EditEventPage-Button {
   margin-top: 20px;
   margin-right: 16px;
+}
+
+.EditEventPage-Heading {
+  font-size: 1.538em;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.EditEventPage-CloseButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 10px;
 }
