Update RoomTimelime Event's hover style

--- a/src/components/RoomTimeline.css
+++ b/src/components/RoomTimeline.css
@@ -19,6 +19,10 @@
   background-color: #D5DFE9; 
 }
 
+.RoomTimeline-Slot_event:hover {
+  background-color: #98A9B9;
+}
+
 
 .RoomTimeline-Slot .EventTooltip {
   visibility: hidden;
