--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -55,6 +55,10 @@
   font-weight: 500;
 }
 
+.DatePicker-DayPicker .CalendarDay__blocked_out_of_range {
+  color: #858E98 !important;
+}
+
 .DatePicker-DayPicker .CalendarDay {
   color: #000;
   font-size: 11px;
