--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -23,16 +23,12 @@
   float: right;
 }
 
-.DatePicker-Calendar {
-  position: absolute;
-  z-index: 10;
-  padding: 16px;
-  top: 36px;
-  width: 604px;
-  height: 232px;
-  background: #FFFFFF;
-  box-shadow: 0 1px 8px 0 rgba(0,44,92,0.28);
-  border-radius: 4px;
+.DatePicker-DayPicker {
+  visibility: hidden;
+}
+
+.DatePicker_open .DatePicker-DayPicker {
+  visibility: visible;
 }
 
 .DatePicker-DayPicker .DayPicker {
