Fix locale. Update tests

--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -11,6 +11,12 @@
   cursor: pointer;
 }
 
+.DatePicker-Close {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
 .DatePicker_open .DatePicker-Date {
   color: #0070E0;
 }
