--- a/src/components/RoomTimeline.css
+++ b/src/components/RoomTimeline.css
@@ -25,7 +25,7 @@
 
 
 .RoomTimeline-Slot .EventTooltip {
-  visibility: hidden;
+  display: none;
   position: absolute;
   top: 28px;
   left: 50%;
@@ -37,7 +37,7 @@
 }
 
 .RoomTimeline-Slot:hover .EventTooltip {
-  visibility: visible;
+  display: block;
 }
 
 .RoomTimeline-Slot .EventTooltip:before {
