--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -23,21 +23,32 @@
   float: right;
 }
 
-.DatePicker .DayPicker {
+.DatePicker .DatePicker-DayPickerContainer  {
   visibility: hidden;
 }
 
-.DatePicker_open .DayPicker {
+.DatePicker_open .DatePicker-DayPickerContainer {
   visibility: visible;
 }
 
-.DatePicker .DayPicker {
+.DatePicker-DayPickerContainer {
+  background-color: #fff;
   position: absolute;
-  top: 36px;
   z-index: 10;
   box-shadow: 0 1px 8px 0 rgba(0,44,92,0.28);
   border-radius: 4px;
-  padding-bottom: 8px;
+  top: 36px;
+}
+
+@media screen and (max-width: 918px) {
+  .DatePicker-DayPickerContainer {
+    max-width: 100%;
+    overflow-y: scroll;
+  }
+}
+
+.DatePicker .DayPicker {
+  background-color: transparent;
 }
 
 .DatePicker .CalendarMonth_caption {
