--- a/src/components/EventsDiagram.css
+++ b/src/components/EventsDiagram.css
@@ -25,6 +25,16 @@
   overflow-y: scroll;
 }
 
+.EventDiagram-FloorTitle {
+  margin-top: 21px;
+  margin-left: 24px;
+  margin-bottom: 4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #858E98;
+  font-size: 0.846em;
+}
+
 .EventDiagram-Room .Room {
   margin-left: 24px;
   width: 231px;
