--- a/src/components/EventTooltip.css
+++ b/src/components/EventTooltip.css
@@ -1,11 +1,10 @@
 .EventTooltip {
-  position: absolute;
-  display: inline-block;
+  position: relative;
+  display: block;
   background: #FFFFFF;
   padding: 16px;
   box-shadow: 0 1px 16px 0 rgba(0,44,92,0.28);
   border-radius: 8px;
-  min-width: 330px;
 }
 
 .EventTooltip-Title {
