--- a/src/components/EventsDiagram.css
+++ b/src/components/EventsDiagram.css
@@ -44,3 +44,9 @@
   flex: 1;
 }
 
+.EventsDiagram-TooltipContainer {
+  position: absolute;
+  z-index: 10;
+  min-width: 330px;
+  min-height: 115px;
+}
