--- a/src/components/RoomTimeline.css
+++ b/src/components/RoomTimeline.css
@@ -13,6 +13,18 @@
   background-color: #fff;
 }
 
+.RoomTimeline-Slot_free {
+  background-color: #fff;
+}
+
+.RoomTimeline-Slot_free:hover {
+  background-color: #1D54FE;
+}
+
+.RoomTimeline-Slot_free:active {
+  background-color: #1D00FE ;
+}
+
 .RoomTimeline-Slot_event,
 .RoomTimeline-Slot_past {
   background-color: #D5DFE9; 
