--- a/src/components/RoomTimeline.css
+++ b/src/components/RoomTimeline.css
@@ -19,12 +19,15 @@
   background-color: #fff;
 }
 
-.RoomTimeline-Slot_free:hover {
+.RoomTimeline-Slot_free_active:hover {
   background-color: #1D54FE;
   border-radius: 2px;
 }
+.RoomTimeline-Slot_free_active:active {
+  background-color: #1D00FE ;
+}
 
-.RoomTimeline-Slot_free:hover:after {
+.RoomTimeline-Slot_free_active:hover:after {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -35,20 +38,19 @@
   color: #fff;
 }
 
-.RoomTimeline-Slot_free:active {
-  background-color: #1D00FE ;
-}
-
 .RoomTimeline-Slot_event,
 .RoomTimeline-Slot_past {
   background-color: #D5DFE9; 
 }
 
-.RoomTimeline-Slot_event_highlighted,
 .RoomTimeline-Slot_event:hover {
   background-color: #98A9B9;
 }
 
+.RoomTimeline-Slot_event_highlighted,
+.RoomTimeline-Slot_event_highlighted:hover {
+  background: #8695A3;
+}
 
 .RoomTimeline-Slot .EventTooltip {
   display: none;
